...
                                                style: TextStyle(
                                                    color: Theme.of(context)
                                                        .colorScheme
                                                        .error),
                                              ),
                                              SingleChildScrollView(
                                                key: const Key("childScroll"),
                                                scrollDirection:
                                                    Axis.horizontal,
                                                child: Row(
                                                  mainAxisAlignment:
                                                      MainAxisAlignment.center,
                                                  children: [
...
                                                    //   width: 40,
                                                    // ),
                                                    Column(
                                                      children: [
                                                        Padding(
                                                          key:
                                                              const Key('tree'),
                                                          padding:
                                                              const EdgeInsets
                                                                  .all(20.0),
                                                          child:
                                                              PassowordIconButton(
                                                            'assets/images/trees-2.png',
...
                                                      width: 20,
                                                    ),
                                                    Column(
                                                      children: [
                                                        Padding(
                                                          key: const Key(
                                                              'hazelnut'),
                                                          padding:
                                                              const EdgeInsets
                                                                  .all(20.0),
                                                          child:
                                                              PassowordIconButton(
                                                            'assets/images/hazelnut.png',
...
