...
        body: Column(
          children: [
            const SizedBox(
              width: 25,
              height: 25,
            ),
            Text("ماذا تود أن تفعل اليوم؟",
                style: Theme.of(context).textTheme.titleLarge),
            const SizedBox(
              width: 10,
              height: 10,
            ),
            Center(
              child: InkWell(
                key: const Key('parent_center1'),
                onTap: () => Navigator.push(
                    context,
                    MaterialPageRoute(
                        builder: (context) =>
                            const myChildren())), // need update
                child: Card(
...
